With v2 eligibility without iris
