# public/openapi-schema.yaml
@@ -115,7 +115,61 @@ paths:
                     description: true si l'adresse testée se situe dans le périmètre de développement prioritaire d'un réseau classé (zone où s'applique une obligation de raccordement pour certains bâtiments)
                   isBasedOnIris:
                     type: boolean
-                    description: KO -- s'il n'y a pas de réseau à moins de 1 km de l'adresse testée, nous vérifions s'il existe une consommation de chaleur sur un réseau dans le quartier (iris), sur la base des données locales de l'énergie. Le cas échéant, c'est qu'il existe un réseau dans le quartier, dont nous n'avons pas le tracé.
+                    description: s'il n'y a pas de réseau à moins de 1 km de l'adresse testée, nous vérifions s'il existe une consommation de chaleur sur un réseau dans le quartier (iris), sur la base des données locales de l'énergie. Le cas échéant, c'est qu'il existe un réseau dans le quartier, dont nous n'avons pas le tracé.
+                  futurNetwork:
+                    type: boolean
+                    description: true si le réseau le plus proche, sur lequel est établi le résultat isEligible, est un réseau actuellement en construction
+                  id:
+                    type: string
+                    description: identifiant national du réseau de chaleur le plus proche
+                  rateENRR:
+                    type: number
+                    description: taux d'énergies renouvelables et de récupération du réseau de chaleur le plus proche, en %, sur la base du dernier arrêté "DPE"
+                  gestionnaire:
+                    type: string
+                    description: nom du gestionnaire du réseau le plus proche
+                  rateCO2:
+                    type: number
+                    description: contenu CO2 en analyse du cycle de vie (émissions directes et indirectes) du réseau de chaleur le plus proche, en kg/kWh, sur la base du dernier arrêté "DPE"
+        '400':
+          description: Erreur de paramètres
+        '500':
+          description: Erreur technique
+  /v2/eligibility:
+    get:
+      summary: Tester l'éligibilité d'un point géographique avec les réseaux de chaleur.
+      tags:
+        - Informations générales
+      parameters:
+        - name: lat
+          in: query
+          description: Latitude (EPSG:4326)
+          required: true
+          schema:
+            type: number
+        - name: lon
+          in: query
+          description: Longitude (EPSG:4326)
+          required: true
+          schema:
+            type: number
+      responses:
+        '200':
+          description: Opération réussie
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  isEligible:
+                    type: boolean
+                    description: "true si la distance entre l'adresse testée et le réseau de chaleur le plus proche est inférieure à un certain seuil de distance* ou si nous avons connaissance d'un réseau de chaleur dans le quartier dont nous n'avons pas le tracé. * Le seuil de distance est fixé à 100 m sur Paris, 200 m ailleurs. En pratique ce seuil dépendra des besoins en chaleur du bâtiment à raccorder. Les valeurs prises ici sont volontairement élevées : le gestionnaire du réseau sera le seul à même d'évaluer la faisabilité du raccordement"
+                  distance:
+                    type: number
+                    description: distance à vol d'oiseau entre l'adresse testée et le réseau de chaleur le plus proche
+                  inPDP:
+                    type: boolean
+                    description: true si l'adresse testée se situe dans le périmètre de développement prioritaire d'un réseau classé (zone où s'applique une obligation de raccordement pour certains bâtiments)
                   futurNetwork:
                     type: boolean
                     description: true si le réseau le plus proche, sur lequel est établi le résultat isEligible, est un réseau actuellement en construction
